[gd_scene load_steps=14 format=2]

[ext_resource path="res://LabelFPS.gd" type="Script" id=1]
[ext_resource path="res://CheckButtonSimulation.gd" type="Script" id=2]
[ext_resource path="res://ButtonStep.gd" type="Script" id=3]
[ext_resource path="res://ButtonRandom.gd" type="Script" id=4]
[ext_resource path="res://ButtonClear.gd" type="Script" id=5]
[ext_resource path="res://HSliderSpeed.gd" type="Script" id=6]
[ext_resource path="res://LabelSpeed.gd" type="Script" id=7]
[ext_resource path="res://SpinBoxRandFill.gd" type="Script" id=8]
[ext_resource path="res://ZoneRules.gd" type="Script" id=9]
[ext_resource path="res://HUD.gd" type="Script" id=10]
[ext_resource path="res://DarkTheme/Dark.theme" type="Theme" id=11]
[ext_resource path="res://ZoneRulesMenu.tscn" type="PackedScene" id=12]

[sub_resource type="GDScript" id=3]
script/source = "extends Label


func _ready():
	pass

"

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="."]
anchor_bottom = 1.0
margin_right = 290.0
theme = ExtResource( 11 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 270.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="LabelFPS" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = -1.0
margin_right = 270.0
margin_bottom = 24.4
text = "FPS"
script = ExtResource( 1 )

[node name="PauseHBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 270.0
margin_bottom = 55.0

[node name="LabelPaused" type="Label" parent="Panel/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_top = -1.0
margin_right = 104.4
margin_bottom = 24.4
text = "Simulation (p)"
script = SubResource( 3 )

[node name="CheckButtonSimulation" type="CheckButton" parent="Panel/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_left = 107.0
margin_right = 149.0
margin_bottom = 25.0
pressed = true
script = ExtResource( 2 )

[node name="SpeedHBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 270.0
margin_bottom = 85.0

[node name="LabelSpeed" type="Label" parent="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer"]
margin_top = -1.0
margin_right = 50.4
margin_bottom = 24.4
text = "Speed"
script = ExtResource( 7 )

[node name="HSliderSpeed" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer"]
margin_left = 53.0
margin_right = 270.0
margin_bottom = 13.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 120.0
value = 60.0
ticks_on_borders = true
script = ExtResource( 6 )

[node name="ButtonStep" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 270.0
margin_bottom = 113.0
text = "Step (s)"
script = ExtResource( 3 )

[node name="FillHBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 270.0
margin_bottom = 141.0

[node name="ButtonRandom" type="Button" parent="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer"]
margin_right = 205.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Random fill (r)"
script = ExtResource( 4 )

[node name="SpinBoxRandFill" type="SpinBox" parent="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer"]
margin_left = 208.0
margin_right = 270.0
margin_bottom = 23.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5
script = ExtResource( 8 )

[node name="ButtonClear" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 270.0
margin_bottom = 169.0
text = "Clear (c)"
script = ExtResource( 5 )

[node name="ZonesRulesTabContainer" type="TabContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 270.0
margin_bottom = 238.0

[node name="Zone 0" type="PanelContainer" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer" instance=ExtResource( 12 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 9 )

[node name="Zone 1" type="PanelContainer" parent="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer" instance=ExtResource( 12 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 9 )
zone = 1
rules = {
0: [ false, false, true, true, true, false, false, false, false ],
1: [ false, false, false, true, false, false, false, false, false ]
}

[node name="HelpRichTextLabel" type="RichTextLabel" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 270.0
margin_bottom = 349.0
text = "**Help**

Pan with left click.
Draw cells with right click.
Zoom in with mouse wheel."
fit_content_height = true

[connection signal="toggled" from="Panel/ScrollContainer/VBoxContainer/PauseHBoxContainer/CheckButtonSimulation" to="." method="_on_CheckButtonSimulation_toggled"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer/HSliderSpeed" to="." method="_on_HSliderSpeed_value_changed"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer/HSliderSpeed" to="Panel/ScrollContainer/VBoxContainer/SpeedHBoxContainer/LabelSpeed" method="_on_HSliderSpeed_value_changed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/ButtonStep" to="." method="_on_ButtonStep_pressed"]
[connection signal="button_down" from="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer/ButtonRandom" to="." method="_on_ButtonRandom_button_down"]
[connection signal="value_changed" from="Panel/ScrollContainer/VBoxContainer/FillHBoxContainer/SpinBoxRandFill" to="." method="_on_SpinBoxRandFill_value_changed"]
[connection signal="button_down" from="Panel/ScrollContainer/VBoxContainer/ButtonClear" to="." method="_on_ButtonClear_button_down"]
[connection signal="rules_changed" from="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Zone 0" to="." method="_on_Zone_rules_changed"]
[connection signal="rules_changed" from="Panel/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Zone 1" to="." method="_on_Zone_rules_changed"]
